src-ken&y/objects/Credit_Profile_Rules__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>rules around setting risk tolerance and credit review cycle</description>
    <fields>
        <fullName>AR_Percent_Past_Due__c</fullName>
        <inlineHelpText>Percent of AR a customer can be past due on.</inlineHelpText>
        <label>AR Percent Past Due</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Days_Past_Due__c</fullName>
        <inlineHelpText>Days past due on their balance</inlineHelpText>
        <label>Days Past Due</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Percent_Over_Credit__c</fullName>
        <inlineHelpText>Percent Over Credit this customer is allowed to go over.</inlineHelpText>
        <label>Percent Over Credit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Credit Profile Rules</label>
</CustomObject>